# wordc

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  post_installation.py  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml  documentation.yml
.github/workflows/: codeql.yml  scorecard.yml  tests.yml
docs/: conf.py  example.ipynb  requirements.txt
requirements/: base.txt  development.in  development.txt  production.in  production.txt  test.in  test.txt
src/wordc/: __init__.py  cli.py  config.py  utils.py  wordc.py
tests/: __init__.py  test_args.py
tests/resources/: 100_bytes.txt  mobydick_final_word.txt
