# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=package_data
[metadata]
name = wordc
version = attr: wordc.__version__
author = Stephen R A King
author_email = sking.github@gmail.com
maintainer = Stephen R A King
maintainer_email = sking.github@gmail.com
description = boilerplate you need to create a Python package.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,
platforms = Any
url = https://github.com/Stephen-RA-King/wordc
download_url = https://github.com/Stephen-RA-King/wordc/archive/refs/heads/main.zip
license = MIT
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/Stephen-RA-King/wordc/issues
    CI = https://github.com/Stephen-RA-King/wordc/actions
    Documentation = https://wordc.readthedocs.io/en/latest/
    Release Notes = https://github.com/Stephen-RA-King/wordc/releases
    Source Code = https://github.com/Stephen-RA-King/wordc/

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English
# for EOL versions see: https://devguide.python.org/versions/
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    chardet>=5.2.0
	psutil>=5.9.8

[options.packages.find]
where = src

[options.package_data]
wordc =

[options.entry_points]
console_scripts =
    wordc = wordc.wordc:main


[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = numpy
max-complexity = 18
max-line-length = 88
select = B, B9, C, D, E, F, N, W
exclude = tests/*,.tox/*,.nox/*,docs/*,.git/*,.github/*
ignore =
    # pycodestyle - whitespace before ‘,’, ‘;’, or ‘:’ - to be compatible with black
    E203,
    # pycodestyle - line break before binary operator
    W503,
per-file-ignores =
    # flake8 - module imported but not used
    __init__.py:F401
    pathmagic.py:F401
    test_wordc.py:F401
